--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,49 +17,48 @@
 </head>
 <body>
     <header class="top-container">
-        <div class="logo-alibe">
-            <img src="/images/logo.png" alt="logo">
-        </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="#">Inicio</a></li> <!--# porque estamos en el index-->
-                <li><a href="./pages/busqueda.html">Busqueda</a></li>
-                <li><a href="./pages/ingresar.html">Ingresar</a></li>
-            </ul>
-        </nav>   
-        <nav class="top-container">
-            <div class="container-fluid">
-                <div class="logo-alibe">
-                    <img src="/images/logo.png" alt="logo">
-                </div>
-              <a class="navbar-brand" href="#">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/ingresar.html">Ingresar</a>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Busqueda</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+                <nav class="menu">
+                    <div class="container-fluid">
+                        <div class="imagen-logo">
+                            <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                        </div>
+                        <li><a href="#">Inicio</a></li> <!--# porque estamos en el index-->
+                        <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="¿Qué estas buscando?" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                        </form>
+                        <li><a href="./pages/ingresar.html">Ingresar</a></li>
+                    </div>
+                  </nav>  
     </header>
     <main>
         <section>
             <h1>Alibe - Distribuidora de ALImentos y BEbidas</h1>
         </section>
-        <div class="top-buttons">
-            <button>Alimentos v</button>
-            <button>Bebidas v</button>
-        </div>
+        <section class="desplegables">
+            <div class="dropdown-total">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Alimentos
+                </button>
+                <ul class="dropdown-menu">
+                    <li><button class="dropdown-item" type="button">Condimentos y especias</button></li>
+                    <li><button class="dropdown-item" type="button">Yerba</button></li>
+                    <li><button class="dropdown-item" type="button">Harina</button></li>
+                    <li><button class="dropdown-item" type="button">Cacao</button></li>
+                    <li><button class="dropdown-item" type="button">Golosinas</button></li>
+                    <li><button class="dropdown-item" type="button">Panificados</button></li>
+                </ul>
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Bebidas
+                </button>
+                <ul class="dropdown-menu2">
+                      <li><button class="dropdown-item" type="button">Gaseosas</button></li>
+                      <li><button class="dropdown-item" type="button">Agua con gas</button></li>
+                      <li><button class="dropdown-item" type="button">Agua saborizada</button></li>
+                </ul>
+          </div>
+        </section>
+          
         <section>
             <article>
                 <div class="oferta-pantalla">
@@ -120,5 +120,8 @@
             <a href="https://www.instagram.com/alibedistribuidora/">Instagram</a>
         </div>
     </footer>
+
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
