termine los desplegables

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Bebidas
                 </button>
-                <ul class="dropdown-menu2">
+                <ul class="dropdown-menu">
                       <li><button class="dropdown-item" type="button">Gaseosas</button></li>
                       <li><button class="dropdown-item" type="button">Agua con gas</button></li>
                       <li><button class="dropdown-item" type="button">Agua saborizada</button></li>
@@ -70,6 +70,7 @@
                 </div>
             </article>
         </section>
+
         <section>
             <h2>Novedades</h2>
         </section>
