agregue el header a las paginas

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 </div>
             </article>
         </section>
-        <section>
+        <section class="subtitulos">
             <h2>Nuestras Marcas</h2>
         </section>
-        <section>
+        <section class="sub-subtitulos">
             <img src="/images/marca1.png" alt="lheriteier">
             <img src="/images/marca2.png" alt="bimbo">
             <img src="/images/marca3.png" alt="la-virginia">
