--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,16 +17,19 @@
 </head>
 <body>
     <header class="top-container">
-        <div class="logo-alibe">
-            <img src="/images/logo.jpg" alt="logo">
-        </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li> <!--../para salir de la carpeta pages-->
-                <li><a href="#">Busqueda</a></li>
-                <li><a href="./ingresar.html">Ingresar</a></li>
-            </ul>
-        </nav>   
+        <nav class="menu">
+            <div class="container-fluid">
+                <div class="imagen-logo">
+                    <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                </div>
+                <li><a href="#">Inicio</a></li> <!--# porque estamos en el index-->
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="¿Qué estas buscando?" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+                <li><a href="./pages/ingresar.html">Ingresar</a></li>
+            </div>
+          </nav>  
     </header>
     <main>
         <section>
@@ -76,5 +80,8 @@
             <p><Instagram>2sAlibe%20Distribuidora</p>
         </div>
     </footer>
+
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
