--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -36,16 +36,25 @@
             <h2 class="title-secundary">Mi cuenta</h2>
             <article>
                 <h3>Ingresar</h3>
+                <div class="mb-3 row">
+                    <label for="staticEmail" class="col-sm-2 col-form-label">Correo electronico</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" id="inputEmail">
+                    </div>
+                  </div>
+                <div class="mb-3 row">
+                    <label for="inputPassword" class="col-sm-2 col-form-label">Contraseña</label>
+                    <div class="col-sm-10">
+                      <input type="password" class="form-control" id="inputPassword">
+                    </div>
+                </div>
                 <div>
-                    <form action="">
-                        <label for="">Correo electronico</label>
-                        <input type="text">
-                        <label for="">Contraseña</label>
-                        <input type="password" name="" id="">
-                        <h4>¿Ha olvidado su contraseña?</h4>
-                        <button>Entrar</button>
-                        <button>Registra una cuenta</button>
-                    </form>
+                    <button type="button-ingreso" class="btn btn-outline-secondary">¿Ha olvidado su contraseña?</button>
+                </div>
+                    <div>
+                        <button type="button-ingreso" class="btn btn-outline-secondary">Entrar</button>
+                        <button type="button-ingreso" class="btn btn-outline-secondary">Registra una cuenta</button>
+                    </div>
                 </div>
             </article>
         </section>
