cambios en busqueda e ingreso

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section>
             <h1>Alibe - Distribuidora de ALImentos y BEbidas</h1>
         </section>
-        <section class="desplegables">
+        <div class="desplegables">
             <div class="dropdown-total">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
                     Alimentos
@@ -57,7 +57,7 @@
                       <li><button class="dropdown-item" type="button">Agua saborizada</button></li>
                 </ul>
           </div>
-        </section>
+        </div>
           
         <section>
             <article>
