--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -32,35 +32,44 @@
           </nav>  
     </header>
     <main>
-        <section>
-            <h2 class="title-secundary">Resultado de busqueda</h2>
-        </section>
-        <section class="contenedor-novedades">
-            <div class="novedades1">
-                <img src="/images/buscar-1.jpg" alt="">
-                <p>Arroz San Javier</p>
-                <button>Comprar</button>
-                <button>Ver</button>
+        <div class="container-fluid">
+            <div class="hstack gap-4">
+                <div class="p-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/images/buscar-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
+                          <button class="btn btn-outline-success" type="submit">Detalle</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/images/buscar-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
+                          <button class="btn btn-outline-success" type="submit">Detalle</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-2">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/images/buscar-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
+                          <button class="btn btn-outline-success" type="submit">Detalle</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="/images/buscar-4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
+                      <button class="btn btn-outline-success" type="submit">Detalle</button>
+                    </div>
+                  </div>
+              </div>
             </div>
-            <div class="novedades2">
-                <img src="/images/buscar-2.jpg" alt="">
-                <p>Pan para hamburguesa Bimbo</p>
-                <button>Comprar</button>
-                <button>Ver</button>
-            </div>
-            <div class="novedades3">
-                <img src="/images/buscar-3.jpg" alt="">
-                <p>Tomate triturado Ballesta</p>
-                <button>Comprar</button>
-                <button>Ver</button>
-            </div>
-            <div class="novedades4">
-                <img src="/images/buscar-4.jpg" alt="">
-                <p>Aceite Costa del Sol</p>
-                <button>Comprar</button>
-                <button>Ver</button>
-            </div>
-        </section>
     </main>
     <footer>
         <div>
