--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -70,11 +70,12 @@
         </div>
         <div>
             <h3>Contacto</h3>
+            <p>Dirección: Sucursal Sunchales; Alem 1190, Sunchales, Santa Fe.</p>
             <p>+5434259782</p>
         </div>
         <div>
             <h3>Redes</h3>
-            <p><Instagram>2sAlibe%20Distribuidora</p>
+            <a href="https://www.instagram.com/alibedistribuidora/">Instagram</a>
         </div>
     </footer>
 
