--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -22,12 +22,12 @@
                 <div class="imagen-logo">
                     <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
                 </div>
-                <li><a href="#">Inicio</a></li> <!--# porque estamos en el index-->
+                <li><a href="../index.html">Inicio</a></li> <!--# porque estamos en el index-->
                 <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="¿Qué estas buscando?" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
-                <li><a href="./pages/ingresar.html">Ingresar</a></li>
+                <li><a href="./ingresar.html">Ingresar</a></li>
             </div>
           </nav>  
     </header>
