prueba visualización de imagenes en github

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav class="menu">
                     <div class="container-fluid">
                         <div class="imagen-logo">
-                            <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                            <img src="./images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
                         </div>
                         <li><a href="#">Inicio</a></li> <!--# porque estamos en el index-->
                         <form class="d-flex" role="search">
@@ -62,11 +62,11 @@
         <section>
             <article>
                 <div class="oferta-pantalla">
-                    <img src="/images/oferta-1.jpg" alt="oferta-uno">
-                    <img src="/images/oferta-2.jpg" alt="oferta-dos">
-                    <img src="/images/oferta-3.jpg" alt="oferta-tres">
-                    <img src="/images/oferta-4.jpg" alt="oferta-cuatro">
-                    <img src="/images/oferta-5.jpg" alt="oferta-cinco">
+                    <img src="./images/oferta-1.jpg" alt="oferta-uno">
+                    <img src="./images/oferta-2.jpg" alt="oferta-dos">
+                    <img src="./images/oferta-3.jpg" alt="oferta-tres">
+                    <img src="./images/oferta-4.jpg" alt="oferta-cuatro">
+                    <img src="./images/oferta-5.jpg" alt="oferta-cinco">
                 </div>
             </article>
         </section>
@@ -77,8 +77,8 @@
         <section class="img-novedades">
             <article class="img-news">
                 <div class="photo-news">
-                    <img src="/images/novedades-1.jpg" alt="bimbo">
-                    <img src="/images/novedades-2.jpg" alt="lheritier">
+                    <img src="./images/novedades-1.jpg" alt="bimbo">
+                    <img src="./images/novedades-2.jpg" alt="lheritier">
                 </div>
             </article>
         </section>
@@ -86,12 +86,12 @@
             <h2>Nuestras Marcas</h2>
         </section>
         <section class="sub-subtitulos">
-            <img src="/images/marca1.png" alt="lheriteier">
-            <img src="/images/marca2.png" alt="bimbo">
-            <img src="/images/marca3.png" alt="la-virginia">
-            <img src="/images/marca4.png" alt="hamlet">
-            <img src="/images/marca5.png" alt="cunnington">
-            <img src="/images/marca6.png" alt="julicroc">
+            <img src="./images/marca1.png" alt="lheriteier">
+            <img src="./images/marca2.png" alt="bimbo">
+            <img src="./images/marca3.png" alt="la-virginia">
+            <img src="./images/marca4.png" alt="hamlet">
+            <img src="./images/marca5.png" alt="cunnington">
+            <img src="./images/marca6.png" alt="julicroc">
         </section>
         <section>
             <h2>Ubicacion</h2>
