arregle enlaces de imagenes de busqueda e ingresar

--- a/pages/ingresar.html
+++ b/pages/ingresar.html
@@ -20,7 +20,7 @@
         <nav class="menu">
             <div class="container-fluid">
                 <div class="imagen-logo">
-                    <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                    <img src="../images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
                 </div>
                 <li><a href="../index.html">Inicio</a></li> <!--# porque estamos en el index-->
                 <form class="d-flex" role="search">
