--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -20,7 +20,7 @@
         <nav class="menu">
             <div class="container-fluid">
                 <div class="imagen-logo">
-                    <img src="/images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                    <img src="../images/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
                 </div>
                 <li><a href="../index.html">Inicio</a></li> <!--# porque estamos en el index-->
                 <form class="d-flex" role="search">
@@ -36,7 +36,7 @@
             <div class="hstack gap-4">
                 <div class="p-2">
                     <div class="card" style="width: 18rem;">
-                        <img src="/images/buscar-1.jpg" class="card-img-top" alt="...">
+                        <img src="../images/buscar-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
                           <button class="btn btn-outline-success" type="submit">Detalle</button>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="p-2">
                     <div class="card" style="width: 18rem;">
-                        <img src="/images/buscar-2.jpg" class="card-img-top" alt="...">
+                        <img src="../images/buscar-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
                           <button class="btn btn-outline-success" type="submit">Detalle</button>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="p-2">
                     <div class="card" style="width: 18rem;">
-                        <img src="/images/buscar-3.jpg" class="card-img-top" alt="...">
+                        <img src="../images/buscar-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
                           <button class="btn btn-outline-success" type="submit">Detalle</button>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="/images/buscar-4.jpg" class="card-img-top" alt="...">
+                    <img src="../images/buscar-4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <button class="btn btn-outline-success" type="submit">Agregar al carrito</button>
                       <button class="btn btn-outline-success" type="submit">Detalle</button>
